--- a/biblio/style.css
+++ b/biblio/style.css
@@ -399,6 +399,33 @@ h1 {
     opacity: 0; 
 }
 
-
-
-
+/* Estilos básicos do dropdown */
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none; /* Esconde o conteúdo do dropdown por padrão */
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+  }
+  
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  .dropdown-content a:hover {
+    background-color: #ddd;
+  }
+  
+  /* Quando a classe 'active' for adicionada, o dropdown será mostrado */
+  .dropdown.active .dropdown-content {
+    display: block; /* Mostra o conteúdo do dropdown */
+  }
